review fix extra margin footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,15 +3,16 @@ $content-padding: 12.2rem;
 $footer-height: 20.1rem;
 
 .nav-absolute-height {
-    padding-top: $navbar-height
+  padding-top: $navbar-height;
 }
 
 .content-space-width {
-    padding-left: $content-padding;
-    padding-right: $content-padding;
+  padding-left: $content-padding;
+  padding-right: $content-padding;
 }
 
 .min-content-hight {
-    // navbar is absolute takes no space
-    min-height: calc(100vh  - $footer-height);
+  // navbar is absolute takes no space
+  // 1.4 rem is footer top margin
+  min-height: calc(100vh - $footer-height - 1.4rem);
 }
