--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,89 +1,89 @@
-@import '../app.component.scss';
-@import '../../styles.scss';
+@import "../app.component.scss";
+@import "../../styles.scss";
 
 .footer {
-    width: 100%;
-    height: $footer-height;
-    padding-top: 1.6rem;
-    margin-top: 1.4rem;
+  width: 100%;
+  height: $footer-height;
+  padding-top: 1.6rem;
+  margin-top: 1.4rem;
 
-    &__horizontal-line {
-        border-top: 1px solid #667085;
-        padding-bottom: 1.6rem;
+  &__horizontal-line {
+    border-top: 1px solid #667085;
+    padding-bottom: 1.6rem;
+  }
+
+  &__container {
+    margin-top: 1.6rem;
+    height: 11.2rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__group-left {
+    display: flex;
+    align-items: center;
+    height: 7rem;
+  }
+
+  &__group-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__credit {
+    font-family: $custom-font;
+    &--header {
+      font-size: 2rem;
+      line-height: 3.3rem;
+      font-weight: 600;
+      color: #344054;
     }
 
-    &__container {
-        margin-top: 1.6rem;
-        height: 11.2rem;
-        display: flex;
-        justify-content: space-between;
+    &--details {
+      font-weight: 400;
+      font-size: 1.5rem;
+      line-height: 2.475rem;
+      color: #344054;
+    }
+  }
+
+  &__logo {
+    &--1 {
+      height: 6.5rem;
     }
 
-    &__group-left {
-        display: flex;
-        align-items: center;
-        height: 7rem;
+    &--2 {
+      height: 7rem;
     }
+  }
 
-    &__group-right {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+  &__contact-us {
+    font-family: $custom-font;
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 3.3rem;
+    color: #344054;
+    margin-bottom: 4px;
+  }
 
-    &__credit {
-        font-family: $custom-font;
-        &--header {
-            font-size: 2rem;
-            line-height: 3.3rem;
-            font-weight: 600;
-            color: #344054;
-        }
-
-        &--details {
-            font-weight: 400;
-            font-size: 1.5rem;
-            line-height: 2.475rem;
-            color: #344054;
-        }
-    }
-
-    &__logo {
-        &--1 {
-            height: 6.5rem;
-        }
-
-        &--2 {
-            height: 7rem;
-        }
-    }
-
-    &__contact-us {
-        font-family: $custom-font;
-        font-weight: 600;
-        font-size: 2rem;
-        line-height: 3.3rem;
-        color: #344054;
-        margin-bottom: 4px;
-    }
-
-    &__contact-details {
-        font-family: $custom-font;
-        font-size: 1.5rem;
-        line-height: 2.475rem;
-        width: 24.3rem;
-        text-align: right;
-    }
+  &__contact-details {
+    font-family: $custom-font;
+    font-size: 1.5rem;
+    line-height: 2.475rem;
+    width: 24.3rem;
+    text-align: right;
+  }
 }
 
 .font-semi-bold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .margin-left-14 {
-    margin-left: 1.4rem;
+  margin-left: 1.4rem;
 }
 
 .margin-left-32 {
-    margin-left: 3.2rem;
+  margin-left: 3.2rem;
 }
